--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mongoose": "^7.1.1",
     "nodemon": "^2.0.22",
     "randomstring": "^1.2.3",
+    "sleep-promise": "^9.1.0",
     "toml": "^3.0.0"
   }
 }
